--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,38 +1,8 @@
 /** @format */
 @import "config";
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-* {
-  outline: none;
-}
-body {
-  background: #143d59;
-}
-label {
-  cursor: pointer;
-}
-
 input {
   border: none;
-
-  &[type="submit"] {
-    visibility: hidden;
-    position: absolute;
-    pointer-events: none;
-    z-index: -10;
-  }
 }
 .main {
   display: flex;
@@ -117,9 +87,13 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border: 1px solid $accent;
   padding: 0.5rem 1rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
   border-radius: 4px;
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .todo__check {
@@ -127,8 +101,8 @@ input {
 }
 
 .todo__remove {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   transition: all 0.5s ease-in-out;
   cursor: pointer;
   color: rgb(190, 190, 190);
